--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,14 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.company</groupId>
-  <artifactId>serverclientchat</artifactId>
+  <groupId>org.example</groupId>
+  <artifactId>herokujavasample</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <build>
     <plugins>
       <plugin>
-        <groupId>com.company</groupId>
+        <groupId>org.codehaus.mojo</groupId>
           <artifactId>appassembler-maven-plugin</artifactId>
           <version>1.1.1</version>
           <configuration>
